syntax = "proto3";

import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

package fare;

option go_package = "./;fare";

//机票价格服务
service FareService {
    //新建运价
    rpc CreateFare(CreateFareRequest) returns (CreateFareReply){
        option (google.api.http) = {
            post: "/v1/fare/"
            body: "*"
        };        
    }
    //删除运价
    rpc UpdateFare(UpdateFareRequest) returns (UpdateFareReply){
        option (google.api.http) = {
            put: "/v1/fare/{id}"
            body: "*"
        };
    }      
    //删除运价
    rpc DeleteFare(DeleteFareRequest) returns (DeleteFareReply){
        option (google.api.http) = {
            delete: "/v1/fare/{id}"
        };
    }    
    //机票销售价格计算
    rpc Pricing (PricingRequest) returns (PricingResponse){
        option (google.api.http) = {
            post: "/v1/fare/pricing"
            body: "*"
        };
    }
}

enum PassageTypes {
    ADT = 0;    //成人
    CHD = 1;    //儿童
    INF = 2;    //婴儿
}

enum ServiceLevel {
    First = 0;  //头等
    Business = 1;   //公务
    Economy = 2;    //经济
}

message Result {
    //0 - 成功，其它 - 失败
    string code = 1;
    //失败信息
    string message = 2;
}

message Fare {
    int64 id = 1;
    //起飞机场
    string org_airport = 2;
    //到达机场
    string arr_airport = 3;
    //乘客类型
    PassageTypes passage_type = 4;        
    //旅行开始日期
    google.protobuf.Timestamp first_travel_date = 5;
    //旅行结束日期
    google.protobuf.Timestamp last_travel_date = 6;        
    //价格
    google.protobuf.DoubleValue amount = 7; 
}

message CreateFareRequest{
    Fare fare = 1;            
}

message CreateFareReply {
    //处理结果
    Result result = 1;
}

message UpdateFareRequest {
    Fare fare = 1;      
}

message UpdateFareReply {
    Fare fare = 1;      
}

message DeleteFareRequest {
    int64 id = 1;
}
message DeleteFareReply {
}

//机票销售价格计算请求
message PricingRequest {
    //起飞机场
    string org_airport = 1;
    //到达机场
    string arr_airport = 2;
    //航班日期
    google.protobuf.Timestamp flight_datetime = 3;
    //乘客类型
    PassageTypes passage_type = 4;
}

//机票销售价格计算结果
message PricingResponse {
    //处理结果
    Result result = 1;
    //起飞机场
    string org_airport = 2;
    //到达机场
    string arr_airport = 3;
    //航班日期
    google.protobuf.Timestamp flight_datetime = 4;
    //乘客类型
    PassageTypes passage_type = 5;
    //价格
    google.protobuf.DoubleValue amount = 6;
}